<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BakeryManager</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter">Enter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="employee">Employee</string>
    <string name="user">User</string>
    <string name="buy">Buy</string>
</resources>