<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/lightboxes">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20px"
                        android:textSize="24sp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textColor="@color/colorOnBackground"
                        android:text="@string/login" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailField"
                        android:layout_width="800px"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:layout_margin="20px"
                        android:hint="@string/email">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorOnBackground" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:layout_margin="20px"
                        android:hint="@string/password">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorOnBackground" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/uidField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:layout_margin="20px"
                        android:hint="Uid">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/uid"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorOnBackground" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fullnameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:layout_margin="20px"
                        android:hint="Fullname">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullname"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorOnBackground" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/enter"
                        style="@style/Widget.Material3.Button"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/colorOnBackground"
                        android:text="@string/enter" />
                </LinearLayout>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/employee"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:gravity="center_horizontal|center_vertical"
                            android:background="@drawable/blueboxes">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10px"
                                android:text="@string/employee"
                                android:textColor="@color/colorOnBackground" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/user"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:gravity="center_horizontal|center_vertical"
                            android:background="@drawable/blueboxes">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10px"
                                android:text="@string/user"
                                android:textColor="@color/colorOnBackground" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/register"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:gravity="center_horizontal|center_vertical"
                            android:background="@drawable/blueboxes">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10px"
                                android:text="@string/register"
                                android:textColor="@color/colorOnBackground" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/login"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:gravity="center_horizontal|center_vertical"
                            android:background="@drawable/blueboxes">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10px"
                                android:text="@string/login"
                                android:textColor="@color/colorOnBackground" />
                        </LinearLayout>
                    </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorDarkObject"
        app:srcCompat="@android:drawable/ic_dialog_email" /> -->
</androidx.coordinatorlayout.widget.CoordinatorLayout>
